--- a/sdgangularoct/src/app/auth/spcadmin/manageindicator/manageindicator.component.html
+++ b/sdgangularoct/src/app/auth/spcadmin/manageindicator/manageindicator.component.html
@@ -1,6 +1,6 @@
 <div class="row">
-    <div class="col-md-12" style="text-align: center; padding-top: 15px;">
-        <mat-label style="font-size: 20px;color: brown;"> <i class="fa fa-pencil-square-o" aria-hidden="true"></i>
+    <div class="col-md-12" style="text-align: center; padding-top: 12px;">
+        <mat-label style="font-size: 20px;color:rgb(3, 8, 69);"> <i class="fa fa-pencil-square-o" aria-hidden="true"></i>
             Manage Indicator
         </mat-label>
     </div>
