--- a/sdgangularoct/src/app/auth/spcadmin/manageuser/manageuser.component.html
+++ b/sdgangularoct/src/app/auth/spcadmin/manageuser/manageuser.component.html
@@ -1,6 +1,6 @@
 <div class="row">
-    <div class="col-md-12" style="text-align: center; padding-top: 15px;">
-        <mat-label style="font-size: 20px;color: brown;"> <i class="fa fa-user" aria-hidden="true"></i>
+    <div class="col-md-12" style="text-align: center; padding-top: 12px;">
+        <mat-label style="font-size: 20px;color: rgb(3, 8, 69);"> <i class="fa fa-user" aria-hidden="true"></i>
             Manage Users
         </mat-label>
     </div>
@@ -147,7 +147,7 @@
                             <mat-card class="col-md-12 col-sm-12 col-lg-12" >
                                 <mat-card-content>
                                     <mat-form-field>
-                                        <mat-label>Filter</mat-label>
+                                        <mat-label>Search</mat-label>
                                         <input matInput (keyup)="applyFilter($event)" placeholder="Search" #input>
                                     </mat-form-field>
                                     <div class="mat-elevation-z8" style="overflow: auto">
