--- a/sdgangularoct/src/app/auth/spcadmin/spcadminadduser/spcadminadduser.component.html
+++ b/sdgangularoct/src/app/auth/spcadmin/spcadminadduser/spcadminadduser.component.html
@@ -1,6 +1,6 @@
 <div class="row">
-    <div class="col-md-12" style="text-align: center; padding-top: 15px;">
-        <mat-label style="font-size: 22px;color: brown;">
+    <div class="col-md-12" style="text-align: center; padding-top: 12px;">
+        <mat-label style="font-size: 20px;color: rgb(3, 8, 69);">
             <i class="fa fa-check-square" aria-hidden="true"></i> Add / Manage Users
         </mat-label>
     </div>
