--- a/sdgangularoct/src/app/auth/spcadmin/spcadmindashboard/spcadmindashboard.component.html
+++ b/sdgangularoct/src/app/auth/spcadmin/spcadmindashboard/spcadmindashboard.component.html
@@ -1,14 +1,14 @@
 <div class="row">
-    <div class="col-md-12" style="text-align: center; padding-top: 15px;">
-        <mat-label style="font-size: 20px;color: brown;"> <i class="fa fa-pie-chart" aria-hidden="true"></i> Summary Department Dashboard
+    <div class="col-md-12" style="text-align: center; padding-top: 12px;">
+        <mat-label style="font-size: 20px;color: rgb(3, 8, 69);"> <i class="fa fa-pie-chart" aria-hidden="true"></i> Summary Department Dashboard
         </mat-label>
     </div>
 </div>
 <br>
 <div id="layoutSidenav_content">
     <main>
-        <div class="container-fluid px-2">            
-            <div class="card mb-2">
+        <div class="container-fluid px-1">            
+            <div class="card mb-1">
                 <!-- <div class="card-header bg-primary text-white">
                 <i class="fa fa-pie-chart" aria-hidden="true"></i> Summary Department Dashboard
                 </div> -->
@@ -27,14 +27,12 @@
                                 </mat-select>
                             </mat-form-field>
                         </div>
-
                         <div class="row">                        
                             <div class="col-md-6 col-sm-6 col-lg-6">                               
                                 <button type="button" (click)="reset()" class="btn btn-warning">Reset</button>
                             </div>                        
                         </div>                    
                     </div>
-
                     <div class="row">
                         <div class="col-md-12 col-sm-12 col-lg-12 text-center">
                             <mat-label style="font-size: large; text-align: center; color: rgb(4, 4, 108);">Department Wise DIF Entries Status
