--- a/sdgangularoct/src/app/cgdashboard/cgdistricttable/cgdistricttable.component.scss
+++ b/sdgangularoct/src/app/cgdashboard/cgdistricttable/cgdistricttable.component.scss
@@ -74,6 +74,38 @@ th {
     color: rgb(7, 0, 0);
 }
 
+.view {
+    margin: auto;
+    width: 600px;
+}
+
+.wrapper {
+    position: relative;
+    overflow: auto;
+    border: 1px solid black;
+    white-space: nowrap;
+}
+
+.sticky-col {
+    position: -webkit-sticky;
+    position: sticky;
+    background-color: #f2f2f2;
+}
+
+.first-col {
+    width: 100px;
+    min-width: 100px;
+    max-width: 100px;
+    left: 0px;
+}
+
+.second-col {
+    width: 150px;
+    min-width: 150px;
+    max-width: 150px;
+    left: 100px;
+}
+
 /////////////////////
 
 .goalsimage {
