--- a/sdgangularoct/src/app/cgdashboard/cgfull/cgfull.component.scss
+++ b/sdgangularoct/src/app/cgdashboard/cgfull/cgfull.component.scss
@@ -46,7 +46,7 @@
 td,
 th {
     border: 1px solid #560cf4;
-    padding: 8px;
+    padding: 2.5px;
     text-align: center;
     padding-top: 10px;
     padding-bottom: 10px;
@@ -104,6 +104,57 @@ th {
 }
 
 /////////////////////
+
+#table1 {
+    font-family: Arial, Helvetica, sans-serif;
+    border-collapse: collapse;
+    width: 100%;
+}
+
+#table1 td,
+#table1 th {
+    border: 0px solid #ddd;
+    padding: 3px;
+    padding-top: 10px;
+    padding-bottom: 10px;
+}
+
+#table1 tr:nth-child(even) {
+    background-color: #f2f2f2;
+}
+
+#table1 tr:hover {
+    background-color: #ddd;
+}
+
+#table1 th {
+    padding-top: 12px;
+    padding-bottom: 12px;
+    text-align: left;
+    background-color: #04AA6D;
+    color: white;
+}
+
+///////////////////////////////////////////
+/// 
+.hoverable {
+    position: relative;
+}
+
+.hoverable>.hoverable__tooltip {
+    display: none;
+}
+
+.hoverable:hover>.hoverable__tooltip {
+    display: inline;
+    position: absolute;
+    top: 1em;
+    left: 1em;
+    background: #dcd5f0;
+    color: #2b0303;
+    border: 1px solid rgb(254, 252, 252);
+}
+
 
 
 
