--- a/sdgangularoct/src/app/cgdashboard/cggpm/cggpm.component.html
+++ b/sdgangularoct/src/app/cgdashboard/cggpm/cggpm.component.html
@@ -148,7 +148,7 @@
         style="font-style:normal;font-weight:normal;font-size:28px;line-height:1.25;font-family:sans-serif;letter-spacing:0px;word-spacing:0px;fill:#000000;fill-opacity:1;stroke:none"
         x="545.6828" y="1192.3477" id="text2204">
         <tspan sodipodi:role="line" x="545.6828" y="1192.3477" id="tspan2202">
-          <tspan x="545.6828" y="1192.3477" id="tspan2200">Gariaband</tspan>
+          <tspan x="545.6828" y="1192.3477" id="tspan2200">गरियाबंद</tspan>
         </tspan>
       </text>
     </g>
@@ -352,56 +352,65 @@
         style="font-style:normal;font-weight:normal;font-size:28px;line-height:1.25;font-family:sans-serif;letter-spacing:0px;word-spacing:0px;display:inline;fill:#000000;fill-opacity:1;stroke:none"
         x="433.1828" y="1222.3477" id="text2198">
         <tspan sodipodi:role="line" x="433.1828" y="1222.3477" id="tspan2196">
-          <tspan x="433.1828" y="1222.3477" id="tspan2194">Dhamtari</tspan>
+          <!-- <tspan x="433.1828" y="1222.3477" id="tspan2194">Dhamtari/धमतरी</tspan> -->
+          <tspan x="433.1828" y="1222.3477" id="tspan2194">धमतरी</tspan>
         </tspan>
+          
       </text>
       <text xml:space="preserve"
         style="font-style:normal;font-weight:normal;font-size:28px;line-height:1.25;font-family:sans-serif;letter-spacing:0px;word-spacing:0px;display:inline;fill:#000000;fill-opacity:1;stroke:none"
         x="295.27341" y="1209.4214" id="text2192">
         <tspan sodipodi:role="line" x="295.27341" y="1209.4214" id="tspan2190">
-          <tspan x="295.27341" y="1209.4214" id="tspan2188">Balod</tspan>
+          <!-- <tspan x="295.27341" y="1209.4214" id="tspan2188">Balod</tspan> -->
+          <tspan x="295.27341" y="1209.4214" id="tspan2188">बालोद</tspan>
         </tspan>
       </text>
       <text xml:space="preserve"
         style="font-style:normal;font-weight:normal;font-size:28px;line-height:1.25;font-family:sans-serif;letter-spacing:0px;word-spacing:0px;display:inline;fill:#000000;fill-opacity:1;stroke:none"
         x="118.47063" y="1067.4812" id="text2186">
         <tspan sodipodi:role="line" x="118.47063" y="1067.4812" id="tspan2184">
-          <tspan x="118.47063" y="1067.4812" id="tspan2182">Raj Nandagaon</tspan>
+          <!-- <tspan x="118.47063" y="1067.4812" id="tspan2182">Raj Nandagaon</tspan> -->
+          <tspan x="118.47063" y="1067.4812" id="tspan2182">राजनंदगांव</tspan>
         </tspan>
       </text>
       <text xml:space="preserve"
         style="font-style:normal;font-weight:normal;font-size:28px;line-height:1.25;font-family:sans-serif;letter-spacing:0px;word-spacing:0px;display:inline;fill:#000000;fill-opacity:1;stroke:none"
         x="345.43912" y="1048.7502" id="text2180">
         <tspan sodipodi:role="line" x="345.43912" y="1048.7502" id="tspan2178">
-          <tspan  x="345.43912" y="1048.7502" id="tspan2176">Durg</tspan>
+          <!-- <tspan  x="345.43912" y="1048.7502" id="tspan2176">Durg</tspan> -->
+          <tspan x="345.43912" y="1048.7502" id="tspan2176">दुर्ग</tspan>
         </tspan>
       </text>
       <text xml:space="preserve"
         style="font-style:normal;font-weight:normal;font-size:28px;line-height:1.25;font-family:sans-serif;letter-spacing:0px;word-spacing:0px;display:inline;fill:#000000;fill-opacity:1;stroke:none"
         x="467.76743" y="1020.467" id="text2174">
         <tspan sodipodi:role="line" x="467.76743" y="1020.467" id="tspan2172">
-          <tspan x="467.76743" y="1020.467" id="tspan2170">Raipur</tspan>
+          <!-- <tspan x="467.76743" y="1020.467" id="tspan2170">Raipur</tspan> -->
+          <tspan x="467.76743" y="1020.467" id="tspan2170">रायपुर</tspan>
         </tspan>
       </text>
       <text xml:space="preserve"
         style="font-style:normal;font-weight:normal;font-size:28px;line-height:1.25;font-family:sans-serif;letter-spacing:0px;word-spacing:0px;display:inline;fill:#000000;fill-opacity:1;stroke:none"
         x="368.77292" y="882.58057" id="text2168">
         <tspan sodipodi:role="line" x="368.77292" y="882.58057" id="tspan2166">
-          <tspan x="368.77292" y="882.58057" id="tspan2164">Bemetara</tspan>
+          <!-- <tspan x="368.77292" y="882.58057" id="tspan2164">Bemetara</tspan> -->
+          <tspan x="368.77292" y="882.58057" id="tspan2164">बेमेतरा</tspan>
         </tspan>
       </text>
       <text xml:space="preserve"
         style="font-style:normal;font-weight:normal;font-size:28px;line-height:1.25;font-family:sans-serif;letter-spacing:0px;word-spacing:0px;display:inline;fill:#000000;fill-opacity:1;stroke:none"
         x="435.94754" y="667.44366" id="text2162">
         <tspan sodipodi:role="line" x="435.94754" y="667.44366" id="tspan2160">
-          <tspan x="435.94754" y="667.44366" id="tspan2158">Mungeli</tspan>
+          <!-- <tspan x="435.94754" y="667.44366" id="tspan2158">Mungeli</tspan> -->
+          <tspan x="435.94754" y="667.44366" id="tspan2158">मुंगेली</tspan>
         </tspan>
       </text>
       <text xml:space="preserve"
         style="font-style:normal;font-weight:normal;font-size:28px;line-height:1.25;font-family:sans-serif;letter-spacing:0px;word-spacing:0px;display:inline;fill:#000000;fill-opacity:1;stroke:none"
         x="558.27655" y="712.875" id="text2156">
         <tspan sodipodi:role="line" x="558.27655" y="712.875" id="tspan2154">
-          <tspan x="558.27655" y="712.875" id="tspan2152">Bilaspur</tspan>
+          <!-- <tspan x="558.27655" y="712.875" id="tspan2152">Bilaspur</tspan> -->
+          <tspan x="558.27655" y="712.875" id="tspan2152">बिलासपुर</tspan>
         </tspan>
       </text>
       <!-- <text xml:space="preserve"
@@ -418,129 +427,148 @@
         style="font-style:normal;font-weight:normal;font-size:28px;line-height:1.25;font-family:sans-serif;letter-spacing:0px;word-spacing:0px;display:inline;fill:#000000;fill-opacity:1;stroke:none"
         x="647.37384" y="322.55167" id="text2140">
         <tspan sodipodi:role="line" x="647.37384" y="322.55167" id="tspan2138">
-          <tspan x="647.37384" y="322.55167" id="tspan2136">Koriya</tspan>
+          <!-- <tspan x="647.37384" y="322.55167" id="tspan2136">Koriya</tspan> -->
+          <tspan x="647.37384" y="322.55167" id="tspan2136">कोरिया</tspan>
         </tspan>
       </text>
       <text xml:space="preserve"
         style="font-style:normal;font-weight:normal;font-size:28px;line-height:1.25;font-family:sans-serif;letter-spacing:0px;word-spacing:0px;display:inline;fill:#000000;fill-opacity:1;stroke:none"
         x="283.21225" y="766.61615" id="text2134">
         <tspan sodipodi:role="line" x="283.21225" y="766.61615" id="tspan2132">
-          <tspan x="283.21225" y="766.61615" id="tspan2130">Kabirdham</tspan>
+          <!-- <tspan x="283.21225" y="766.61615" id="tspan2130">Kabirdham</tspan> -->
+          <tspan x="283.21225" y="766.61615" id="tspan2130">कबीरधाम</tspan>
         </tspan>
       </text>
       <text xml:space="preserve"
         style="font-style:normal;font-weight:normal;font-size:28px;line-height:1.25;font-family:sans-serif;letter-spacing:0px;word-spacing:0px;display:inline;fill:#000000;fill-opacity:1;stroke:none"
         x="725.86176" y="599.03217" id="text2128">
         <tspan sodipodi:role="line" x="725.86176" y="599.03217" id="tspan2126">
-          <tspan x="725.86176" y="599.03217" id="tspan2124">Korba</tspan>
+          <!-- <tspan x="725.86176" y="599.03217" id="tspan2124">Korba</tspan> -->
+          <tspan x="725.86176" y="599.03217" id="tspan2124">कोरबा</tspan>
         </tspan>
       </text>
       <text xml:space="preserve"
         style="font-style:normal;font-weight:normal;font-size:28px;line-height:1.25;font-family:sans-serif;letter-spacing:0px;word-spacing:0px;display:inline;fill:#000000;fill-opacity:1;stroke:none"
         x="747.78253" y="780.75757" id="text2122">
         <tspan sodipodi:role="line" x="747.78253" y="780.75757" id="tspan2116">
-          <tspan x="747.78253" y="780.75757" id="tspan2114">Janjgir-</tspan>
+          <!-- <tspan x="747.78253" y="780.75757" id="tspan2114">Janjgir-</tspan> -->
+          <tspan x="747.78253" y="780.75757" id="tspan2114">जांजगीर-</tspan>
         </tspan>
         <tspan sodipodi:role="line" x="747.78253" y="810.75757" id="tspan2120">
-          <tspan x="747.78253" y="810.75757" id="tspan2118">Champa</tspan>
+          <!-- <tspan x="747.78253" y="810.75757" id="tspan2118">Champa</tspan> -->
+          <tspan x="747.78253" y="810.75757" id="tspan2118">चंपा</tspan>
         </tspan>
       </text>
       <text xml:space="preserve"
         style="font-style:normal;font-weight:normal;font-size:28px;line-height:1.25;font-family:sans-serif;letter-spacing:0px;word-spacing:0px;display:inline;fill:#000000;fill-opacity:1;stroke:none"
         x="586.56104" y="911.57281" id="text2112">
         <tspan sodipodi:role="line" x="586.56104" y="911.57281" id="tspan2110">
-          <tspan x="586.56104" y="911.57281" id="tspan2108">Baloda Bazaar</tspan>
+          <!-- <tspan x="586.56104" y="911.57281" id="tspan2108">Baloda Bazaar</tspan> -->
+          <tspan x="586.56104" y="911.57281" id="tspan2108">बलौदा बाजार</tspan>
         </tspan>
       </text>
       <text xml:space="preserve"
         style="font-style:normal;font-weight:normal;font-size:28px;line-height:1.25;font-family:sans-serif;letter-spacing:0px;word-spacing:0px;display:inline;fill:#000000;fill-opacity:1;stroke:none"
         x="918.90204" y="746.10968" id="text2106">
         <tspan sodipodi:role="line" x="918.90204" y="746.10968" id="tspan2104">
-          <tspan x="918.90204" y="746.10968" id="tspan2102">Raigarh</tspan>
+          <!-- <tspan x="918.90204" y="746.10968" id="tspan2102">Raigarh</tspan> -->
+          <tspan x="918.90204" y="746.10968" id="tspan2102">रायगढ़</tspan>
         </tspan>
       </text>
       <text xml:space="preserve"
         style="font-style:normal;font-weight:normal;font-size:28px;line-height:1.25;font-family:sans-serif;letter-spacing:0px;word-spacing:0px;display:inline;fill:#000000;fill-opacity:1;stroke:none"
         x="634.64569" y="1036.7305" id="text2100">
         <tspan sodipodi:role="line" x="634.64569" y="1036.7305" id="tspan2098">
-          <tspan x="634.64569" y="1036.7305" id="tspan2096">Mahasamund</tspan>
+          <!-- <tspan x="634.64569" y="1036.7305" id="tspan2096">Mahasamund</tspan> -->
+          <tspan x="634.64569" y="1036.7305" id="tspan2096">महासमुंद</tspan>
         </tspan>
       </text>
       <text xml:space="preserve"
         style="font-style:normal;font-weight:normal;font-size:28px;line-height:1.25;font-family:sans-serif;letter-spacing:0px;word-spacing:0px;display:inline;fill:#000000;fill-opacity:1;stroke:none"
         x="901.01874" y="480.1875" id="text2094">
         <tspan sodipodi:role="line" x="901.01874" y="480.1875" id="tspan2092">
-          <tspan x="901.01874" y="480.1875" id="tspan2090">Surguja</tspan>
+          <!-- <tspan x="901.01874" y="480.1875" id="tspan2090">Surguja</tspan> -->
+          <tspan x="901.01874" y="480.1875" id="tspan2090">सरगुजा</tspan>
         </tspan>
       </text>
       <text xml:space="preserve"
         style="font-style:normal;font-weight:normal;font-size:28px;line-height:1.25;font-family:sans-serif;letter-spacing:0px;word-spacing:0px;display:inline;fill:#000000;fill-opacity:1;stroke:none"
         x="1117.5985" y="519.48114" id="text2088">
         <tspan sodipodi:role="line" x="1117.5985" y="519.48114" id="tspan2086">
-          <tspan x="1117.5985" y="519.48114" id="tspan2084">Jashpur</tspan>
+          <!-- <tspan x="1117.5985" y="519.48114" id="tspan2084">Jashpur</tspan> -->
+          <tspan x="1117.5985" y="519.48114" id="tspan2084">जशपुर</tspan>
         </tspan>
       </text>
       <text xml:space="preserve"
         style="font-style:normal;font-weight:normal;font-size:28px;line-height:1.25;font-family:sans-serif;letter-spacing:0px;word-spacing:0px;display:inline;fill:#000000;fill-opacity:1;stroke:none"
         x="963.45038" y="241.94141" id="text2082">
         <tspan sodipodi:role="line" x="963.45038" y="241.94141" id="tspan2080">
-          <tspan x="963.45038" y="241.94141" id="tspan2078">Balrampur</tspan>
+          <!-- <tspan x="963.45038" y="241.94141" id="tspan2078">Balrampur</tspan> -->
+          <tspan x="963.45038" y="241.94141" id="tspan2078">बलरामपुर</tspan>
         </tspan>
       </text>
       <text xml:space="preserve"
         style="font-style:normal;font-weight:normal;font-size:28px;line-height:1.25;font-family:sans-serif;letter-spacing:0px;word-spacing:0px;display:inline;fill:#000000;fill-opacity:1;stroke:none"
         x="802.22906" y="312.65305" id="text2076">
         <tspan sodipodi:role="line" x="802.22906" y="312.65305" id="tspan2074">
-          <tspan x="802.22906" y="312.65305" id="tspan2072">Surajpur</tspan>
+          <!-- <tspan x="802.22906" y="312.65305" id="tspan2072">Surajpur</tspan> -->
+           <tspan x="802.22906" y="312.65305" id="tspan2072">सूरजपुर</tspan>
         </tspan>
       </text>
       <text xml:space="preserve"
         style="font-style:normal;font-weight:normal;font-size:28px;line-height:1.25;font-family:sans-serif;letter-spacing:0px;word-spacing:0px;display:inline;fill:#000000;fill-opacity:1;stroke:none"
         x="243.58122" y="1590.1465" id="text2070">
         <tspan sodipodi:role="line" x="243.58122" y="1590.1465" id="tspan2068">
-          <tspan x="243.58122" y="1590.1465" id="tspan2066">Narayanpur</tspan>
+          <!-- <tspan x="243.58122" y="1590.1465" id="tspan2066">Narayanpur</tspan> -->
+          <tspan x="243.58122" y="1590.1465" id="tspan2066">नारायणपुर</tspan>
         </tspan>
       </text>
       <text xml:space="preserve"
         style="font-style:normal;font-weight:normal;font-size:28px;line-height:1.25;font-family:sans-serif;letter-spacing:0px;word-spacing:0px;display:inline;fill:#000000;fill-opacity:1;stroke:none"
         x="431.2785" y="1527.2734" id="text2064">
         <tspan sodipodi:role="line" x="431.2785" y="1527.2734" id="tspan2062">
-          <tspan x="431.2785" y="1527.2734" id="tspan2060">Kondagaon</tspan>
+          <!-- <tspan x="431.2785" y="1527.2734" id="tspan2060">Kondagaon</tspan> -->
+          <tspan x="431.2785" y="1527.2734" id="tspan2060">कोंडागांव</tspan>
         </tspan>
       </text>
       <text xml:space="preserve"
         style="font-style:normal;font-weight:normal;font-size:28px;line-height:1.25;font-family:sans-serif;letter-spacing:0px;word-spacing:0px;display:inline;fill:#000000;fill-opacity:1;stroke:none"
         x="259.87897" y="1386.0408" id="text2058">
         <tspan sodipodi:role="line" x="259.87897" y="1386.0408" id="tspan2056">
-          <tspan x="259.87897" y="1386.0408" id="tspan2054">Kanker</tspan>
+          <!-- <tspan x="259.87897" y="1386.0408" id="tspan2054">Kanker</tspan> -->
+          <tspan x="259.87897" y="1386.0408" id="tspan2054">कांकेर</tspan>
         </tspan>
       </text>
       <text xml:space="preserve"
         style="font-style:normal;font-weight:normal;font-size:28px;line-height:1.25;font-family:sans-serif;letter-spacing:0px;word-spacing:0px;display:inline;fill:#000000;fill-opacity:1;stroke:none"
         x="445.1828" y="1714.3477" id="text2052">
         <tspan sodipodi:role="line" x="445.1828" y="1714.3477" id="tspan2050">
-          <tspan x="445.1828" y="1714.3477" id="tspan2048">Bastar</tspan>
+          <!-- <tspan x="445.1828" y="1714.3477" id="tspan2048">Bastar</tspan> -->
+          <tspan x="445.1828" y="1714.3477" id="tspan2048">बस्तर</tspan>
         </tspan>
       </text>
       <text xml:space="preserve"
         style="font-style:normal;font-weight:normal;font-size:28px;line-height:1.25;font-family:sans-serif;letter-spacing:0px;word-spacing:0px;display:inline;fill:#000000;fill-opacity:1;stroke:none"
         x="300.81021" y="2006.339" id="text2046">
         <tspan sodipodi:role="line" x="300.81021" y="2006.339" id="tspan2044">
-          <tspan x="300.81021" y="2006.339" id="tspan2042">Sukma</tspan>
+          <!-- <tspan x="300.81021" y="2006.339" id="tspan2042">Sukma</tspan> -->
+          <tspan x="300.81021" y="2006.339" id="tspan2042">सुकमा</tspan>
         </tspan>
       </text>
       <text xml:space="preserve"
         style="font-style:normal;font-weight:normal;font-size:28px;line-height:1.25;font-family:sans-serif;letter-spacing:0px;word-spacing:0px;display:inline;fill:#000000;fill-opacity:1;stroke:none"
         x="336.69806" y="1816.5835" id="text2040">
         <tspan sodipodi:role="line" x="336.69806" y="1816.5835" id="tspan2038">
-          <tspan x="336.69806" y="1816.5835" id="tspan2036">Dantewada</tspan>
+          <!-- <tspan x="336.69806" y="1816.5835" id="tspan2036">Dantewada</tspan> -->
+          <tspan x="336.69806" y="1816.5835" id="tspan2036">दंतेवाड़ा</tspan>
         </tspan>
       </text>
       <text xml:space="preserve"
         style="font-style:normal;font-weight:normal;font-size:28px;line-height:1.25;font-family:sans-serif;letter-spacing:0px;word-spacing:0px;display:inline;fill:#000000;fill-opacity:1;stroke:none"
         x="155.93365" y="1806.0629" id="text2034">
         <tspan sodipodi:role="line" x="155.93365" y="1806.0629" id="tspan2032">
-          <tspan x="155.93365" y="1806.0629" id="tspan2030">Bijapur</tspan>
+          <!-- <tspan x="155.93365" y="1806.0629" id="tspan2030">Bijapur</tspan> -->
+          <tspan x="155.93365" y="1806.0629" id="tspan2030">बीजापुर</tspan>
         </tspan>
       </text>
     </g>
