--- a/sdgangularoct/src/app/cgdashboard/districtcompare/districtcompare.component.scss
+++ b/sdgangularoct/src/app/cgdashboard/districtcompare/districtcompare.component.scss
@@ -79,3 +79,54 @@ a {
     padding-top: 10px;
     padding-bottom: 10px;
 }
+
+
+///////////////////////////////////////////
+/// 
+.hoverable {
+    position: relative;
+}
+
+.hoverable>.hoverable__tooltip {
+    display: none;
+}
+
+.hoverable:hover>.hoverable__tooltip {
+    display: inline;
+    position: absolute;
+    top: 1em;
+    left: 1em;
+    background: #dcd5f0;
+    color: #2b0303;
+    border: 1px solid rgb(254, 252, 252);
+}
+
+#table1 {
+    font-family: Arial, Helvetica, sans-serif;
+    border-collapse: collapse;
+    width: 100%;
+}
+
+#table1 td,
+#table1 th {
+    border: 0px solid #ddd;
+    padding: 3px;
+    padding-top: 10px;
+    padding-bottom: 10px;
+}
+
+#table1 tr:nth-child(even) {
+    background-color: #f2f2f2;
+}
+
+#table1 tr:hover {
+    background-color: #ddd;
+}
+
+#table1 th {
+    padding-top: 12px;
+    padding-bottom: 12px;
+    text-align: left;
+    background-color: #04AA6D;
+    color: white;
+}
