--- a/sdgangularoct/src/app/cgdashboard/reportgraph/reportgraph.component.html
+++ b/sdgangularoct/src/app/cgdashboard/reportgraph/reportgraph.component.html
@@ -90,6 +90,18 @@
                                             </div>
                                         </div>
                                         <br>
+
+                                        <div class="row">
+                                            <div class="col-md-12">
+                                                <div id="chart">
+                                                    <apx-chart #chart1 [series]="chartOptions1.series" [chart]="chartOptions1.chart"
+                                                        [labels]="chartOptions1.labels" [fill]="chartOptions1.fill" [stroke]="chartOptions1.stroke"
+                                                        [responsive]="chartOptions1.responsive" [dataLabels]="chartOptions1.dataLabels"></apx-chart>
+                                                </div>
+                                            </div>
+                                        </div>
+
+
                                         <div class="row">
                                             <div class="col-md-12">
                                                 <div id="chart">
@@ -99,7 +111,7 @@
                                                         [responsive]="chartOptions2.responsive"
                                                         [dataLabels]="chartOptions2.dataLabels"></apx-chart>
                                                 </div>
-<div class="row">
+                                    <div class="row">
     <div class="col-md-12">
 <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 3000 2221"
     version="1.1">
