--- a/sdgangularoct/src/app/sif/sifbaselineheader/sifbaselineheader.component.html
+++ b/sdgangularoct/src/app/sif/sifbaselineheader/sifbaselineheader.component.html
@@ -4,12 +4,12 @@
             <img src="assets/images/cglogo_2.png" style="height:70px;width:auto;margin-left: 1rem;" alt="Logo"
                 class="img-responsive">
             <div class="col-md-9 text-center">
-                <h2 class="text-dark">
-                    <span class="font-weight-bold">Chhattisgarh State Planning Commission</span>
-                </h2>
-                <h3 class="text-dark">
-                    <span class="font-weight-bold">SDG Monitoring Dashboard</span>
-                </h3>
+                <h1 class="text-dark">
+                    <!-- <span>{{'HOME.Title' | translate}}</span><br>
+                                    <h2>{{'HOME.SubTitle' | translate}}</h2> -->
+                    <span>Chhattisgarh State Planning Commission</span><br>
+                    <h2>SDG Monitoring Dashboard</h2>
+                </h1>
             </div>
             <img src="assets/images/sdg_logo_new.PNG" style="height:60px;width:auto;margin-left: 1rem;" alt="Logo"
                 class="img-responsive">
